2003-05-02  Peter Stephenson  <pws@csr.com>

	* 18496: Etc/MACHINES: Paul Ackersviller reports the curses
	problem has gone on HP-UX 11 but --disable-dynamic is needed
	for use with Softbench.

2003-04-30  Oliver Kiddle  <opk@zsh.org>

	* 18486: Completion/Base/Utility/_describe: back-out 18458
	because it causes problems when completing only options

2003-04-28  Peter Stephenson  <pws@csr.com>

	* 17820 (tweaked): Andrej: Src/Modules/tcp.h: unconfirmed but
	apparently safe attempt to get recent Cygwin versions to include
	<netinet/in_systm.h> where available.

2003-04-25  Oliver Kiddle  <opk@zsh.org>

	* Haakon Riiser: 18473: Completion/X/Command/_acroread,
	Completion/Unix/Type/_pdf: new completion for Acrobat Reader 5.0.x

	* 18472: zshconfig.ac, Completion/Base/Core/_wanted,
	Completion/Linux/Command/_uml, Completion/Mandrake/Command/_urpmi,
	Completion/Unix/Command/_figlet, Completion/Unix/Command/_grep,
	Completion/Unix/Command/_larch, Completion/Unix/Command/_ls,
	Completion/Unix/Command/_perforce, Completion/Unix/Command/_sccs,
	Completion/Unix/Command/_texinfo, Completion/Unix/Type/_java_class,
	Completion/Zsh/Command/_zmv, Doc/zshtcpsys.yo, Doc/Zsh/compsys.yo,
	Doc/Zsh/mod_tcp.yo, Doc/Zsh/mod_zselect.yo, Doc/Zsh/tcpsys.yo,
	Doc/Zsh/zle.yo, Functions/Misc/relative, Functions/TCP/tcp_alias,
	Functions/TCP/tcp_close, Functions/TCP/tcp_read,
	Functions/Zle/forward-word-match, Functions/Zle/match-words-by-style,
	Functions/Zle/transpose-words-match, Src/zsh.h, Src/Modules/zselect.c,
	Test/B03print.ztst: spelling corrections

2003-04-24  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* unposted, c.f. 2003-04-14: Doc/Zsh/compsys.yo: finish
	rewrite (from _description onwards).  Suspicious-looking
	_regex_arguments entry.

2003-04-24  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Type/_perl_basepods: use _message
	instead of echo for error message

	* 18468: Completion/Unix/Type/_perl_builtin_funcs: follow Bart's